Поправлен адаптив шапки

--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,15 @@
   min-height: 180px;
   border-bottom: 1px solid #e0e0e0;
   background: url("../img/header.jpg") left top repeat-x, #f3fafa; }
+  @media (max-width: 1009px) {
+    .header {
+      min-height: 0px;
+      background: -moz-linear-gradient(left, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
+      background: -webkit-linear-gradient(left, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
+      background: linear-gradient(to right, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0f5f5', endColorstr='#e8f9f8', GradientType=1);
+      overflow: hidden;
+      padding-bottom: 10px; } }
   .header .miniature_block {
     top: 20px; }
   @media (max-width: 636px) {
@@ -18,12 +27,16 @@
   .header .header_nav {
     display: inline-block;
     width: 36.06%; }
-    @media (max-width: 1170px) {
+    @media (max-width: 1009px) {
       .header .header_nav {
-        width: 45%; } }
+        float: left;
+        width: 20%; } }
+    @media (max-width: 770px) {
+      .header .header_nav {
+        width: 50%; } }
     .header .header_nav nav {
       float: right; }
-      @media (max-width: 859px) {
+      @media (max-width: 1009px) {
         .header .header_nav nav {
           display: none; } }
       .header .header_nav nav ul {
@@ -51,7 +64,7 @@
       box-sizing: border-box; }
       .header .header_nav_sandwich:hover span {
         background: #4e070c; }
-      @media (max-width: 636px) {
+      @media (max-width: 1009px) {
         .header .header_nav_sandwich {
           display: none; } }
       .header .header_nav_sandwich span {
@@ -84,20 +97,26 @@
             margin-top: 5px; } }
         .header .header_nav_logo_line_logo span {
           display: none; }
-        .header .header_nav_logo_line_logo a {
+        .header .header_nav_logo_line_logo .logo_mini {
+          display: none;
+          float: left;
+          width: 100%; }
+          .header .header_nav_logo_line_logo .logo_mini img {
+            max-width: 100%; }
+          @media (max-width: 1009px) {
+            .header .header_nav_logo_line_logo .logo_mini {
+              display: block; } }
+        .header .header_nav_logo_line_logo .logo_big {
           display: block;
           position: relative;
           font: 28px/40px 'Georgia-Bold';
           padding-left: 15px;
           margin-top: 15px;
           letter-spacing: 0.7px; }
-          @media (max-width: 636px) {
-            .header .header_nav_logo_line_logo a {
-              font-size: 22px; } }
-          @media (max-width: 391px) {
-            .header .header_nav_logo_line_logo a {
-              padding-left: 5px; } }
-          .header .header_nav_logo_line_logo a:before {
+          @media (max-width: 1009px) {
+            .header .header_nav_logo_line_logo .logo_big {
+              display: none; } }
+          .header .header_nav_logo_line_logo .logo_big:before {
             content: '';
             display: block;
             position: absolute;
@@ -107,9 +126,6 @@
             height: 20px;
             background-image: url("../img/sprite_header.png");
             background-position: 0px -155px; }
-            @media (max-width: 391px) {
-              .header .header_nav_logo_line_logo a:before {
-                left: -5px; } }
         .header .header_nav_logo_line_logo i {
           color: #ff0000; }
         .header .header_nav_logo_line_logo p {
@@ -117,13 +133,9 @@
           font: 16px/10px Verdana;
           font-weight: bold;
           padding-left: 15px; }
-          @media (max-width: 636px) {
+          @media (max-width: 1009px) {
             .header .header_nav_logo_line_logo p {
-              font-size: 13px; } }
-          @media (max-width: 391px) {
-            .header .header_nav_logo_line_logo p {
-              font-size: 10px;
-              padding-left: 5px; } }
+              display: none; } }
           .header .header_nav_logo_line_logo p b {
             font-size: 11px; }
       .header .header_nav_logo_line_sity {
@@ -131,7 +143,7 @@
         font: 11px/40px Verdana;
         color: #363636;
         margin-top: 5px; }
-        @media (max-width: 886px) {
+        @media (max-width: 1009px) {
           .header .header_nav_logo_line_sity {
             display: none; } }
       .header .header_nav_logo_line_schem {
@@ -142,14 +154,14 @@
         color: #5d7489;
         float: right;
         margin-right: 5px; }
+        @media (max-width: 1009px) {
+          .header .header_nav_logo_line_schem {
+            display: none; } }
         .header .header_nav_logo_line_schem:hover {
           color: #074e23;
           text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52); }
         .header .header_nav_logo_line_schem span {
           text-decoration: underline; }
-        @media (max-width: 886px) {
-          .header .header_nav_logo_line_schem {
-            display: none; } }
     .header .header_nav_katalog_line {
       width: 100%;
       background: -moz-linear-gradient(left, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
@@ -158,7 +170,7 @@
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0f5f5', endColorstr='#e8f9f8', GradientType=1);
       padding-bottom: 3px;
       float: left; }
-      @media (max-width: 898px) {
+      @media (max-width: 1009px) {
         .header .header_nav_katalog_line {
           display: none; } }
     .header .header_nav_katalog {
@@ -266,16 +278,19 @@
     margin-left: 6.6%;
     padding-left: 4px;
     box-sizing: border-box; }
-    @media (max-width: 1170px) {
+    @media (max-width: 1009px) {
       .header .header_kontakt {
-        width: 100%;
+        float: right;
         margin-left: 0px;
-        margin-top: 10px; } }
+        width: 52%; } }
+    @media (max-width: 770px) {
+      .header .header_kontakt {
+        width: 100%; } }
     .header .header_kontakt_action {
       float: left;
       font: 12px/35px Verdana;
       color: #840000; }
-      @media (max-width: 1170px) {
+      @media (max-width: 1009px) {
         .header .header_kontakt_action {
           display: none; } }
       .header .header_kontakt_action li a {
@@ -291,46 +306,36 @@
       background: linear-gradient(to right, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0f5f5', endColorstr='#e8f9f8', GradientType=1);
       float: left; }
-      @media (max-width: 1170px) {
+      @media (max-width: 1009px) {
         .header .header_kontakt_line {
-          width: 45%;
-          margin-left: 0px; } }
-      @media (max-width: 840px) {
-        .header .header_kontakt_line {
-          width: 100%;
           min-height: 0px;
-          background: none;
-          margin-bottom: 8px; } }
+          margin-top: 15px;
+          background: none; } }
       .header .header_kontakt_line .meil {
         font: 14px/40px Verdana;
         color: #024753; }
-        @media (max-width: 1170px) {
-          .header .header_kontakt_line .meil {
-            float: right;
-            width: auto; } }
-        @media (max-width: 840px) {
+        @media (max-width: 1009px) {
           .header .header_kontakt_line .meil {
             display: block;
             width: 49%;
             padding: 0px 11px;
+            padding-left: 11px;
+            padding-left: 11px;
             color: #004191;
             border: 1px solid #004191;
             box-sizing: border-box;
             min-height: 48px;
             line-height: 20px;
-            text-align: left;
-            float: left; } }
-  @media (max-width: 840px) and (max-width: 423px) {
-    .header .header_kontakt_line .meil {
-      font-size: 13px;
-      letter-spacing: -1.2px; } }
+            float: right;
+            text-align: right;
+            max-width: 180px; } }
         .header .header_kontakt_line .meil p {
           width: 100%;
           font: 13px/20px Verdana;
           font-weight: bold;
           color: #840000;
           display: none; }
-          @media (max-width: 964px) {
+          @media (max-width: 1009px) {
             .header .header_kontakt_line .meil p {
               display: block; } }
           @media (max-width: 423px) {
@@ -352,6 +357,27 @@
         font: 16px/25px Verdana;
         font-weight: bold;
         color: #840000; }
+        @media (max-width: 1009px) {
+          .header .header_kontakt_line .ring {
+            display: block;
+            width: 49%;
+            padding: 0px 11px;
+            padding-left: 11px;
+            padding-left: 11px;
+            color: #004191;
+            border: 1px solid #004191;
+            box-sizing: border-box;
+            min-height: 48px;
+            line-height: 20px;
+            float: left;
+            text-align: left;
+            max-width: 180px;
+            font-size: 15px; } }
+        @media (max-width: 770px) {
+          .header .header_kontakt_line .ring {
+            max-width: 160px;
+            font-size: 11px;
+            cursor: pointer; } }
         .header .header_kontakt_line .ring:hover i {
           background: url("../img/temp_hover/arow_hover.png"); }
         .header .header_kontakt_line .ring i {
@@ -363,25 +389,6 @@
           margin-top: 9.5px;
           margin-left: 10.1px; }
           @media (max-width: 1070px) {
-            .header .header_kontakt_line .ring i {
-              display: none; } }
-        @media (max-width: 840px) {
-          .header .header_kontakt_line .ring {
-            display: block;
-            width: 49%;
-            padding: 0px 11px;
-            color: #004191;
-            border: 1px solid #004191;
-            box-sizing: border-box;
-            min-height: 48px;
-            line-height: 20px;
-            float: right;
-            text-align: right; } }
-        @media (max-width: 423px) {
-          .header .header_kontakt_line .ring {
-            font-size: 13px;
-            letter-spacing: -1.3px;
-            padding-left: 0px; }
             .header .header_kontakt_line .ring i {
               display: none; } }
         .header .header_kontakt_line .ring p {
@@ -409,11 +416,7 @@
         width: 100%;
         padding-bottom: 3px;
         float: left; }
-        @media (max-width: 1170px) {
-          .header .header_kontakt_line_button_line {
-            float: right;
-            width: 45%; } }
-        @media (max-width: 840px) {
+        @media (max-width: 1009px) {
           .header .header_kontakt_line_button_line {
             display: none; } }
         .header .header_kontakt_line_button_line .button {
@@ -441,12 +444,20 @@
   .header__user_info {
     float: right;
     width: 34.18%; }
-    @media (max-width: 1170px) {
+    @media (max-width: 1009px) {
       .header__user_info {
-        width: 45%; } }
+        float: left;
+        width: 25%;
+        text-align: right; } }
+    @media (max-width: 770px) {
+      .header__user_info {
+        width: 50%; } }
     .header__user_info_product_line {
       width: 100%;
       float: left; }
+      @media (max-width: 1009px) {
+        .header__user_info_product_line {
+          display: none; } }
       .header__user_info_product_line .compare {
         float: left;
         font: 13px/35px 'Georgia-Italic';
@@ -462,9 +473,6 @@
           background-position: -255px -64px;
           width: 31px;
           height: 27px; }
-        @media (max-width: 636px) {
-          .header__user_info_product_line .compare {
-            display: none; } }
         .header__user_info_product_line .compare a {
           text-decoration: underline; }
         .header__user_info_product_line .compare span {
@@ -483,9 +491,6 @@
         .header__user_info_product_line .basket:hover i {
           background-image: url("../img/sprite_header.png");
           background-position: -57px -175px; }
-        @media (max-width: 636px) {
-          .header__user_info_product_line .basket {
-            display: none; } }
         .header__user_info_product_line .basket i {
           display: inline-block;
           width: 22px;
@@ -510,13 +515,13 @@
       background: linear-gradient(to right, rgba(224, 245, 245, 0.2) 0%, rgba(224, 245, 245, 0.7) 50%, rgba(232, 249, 248, 0.2) 100%);
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0f5f5', endColorstr='#e8f9f8', GradientType=1);
       float: left; }
-      @media (max-width: 568px) {
-        .header__user_info_info {
-          background: none; } }
       .header__user_info_info .time {
         float: left;
         margin-top: 12px;
         position: relative; }
+        @media (max-width: 1009px) {
+          .header__user_info_info .time {
+            float: right; } }
         .header__user_info_info .time .timer {
           position: absolute;
           width: 270px;
@@ -554,7 +559,7 @@
           background-image: url("../img/sprite_header.png");
           background-position: 0px -64px;
           float: left; }
-          @media (max-width: 752px) {
+          @media (max-width: 1009px) {
             .header__user_info_info .time .icon {
               display: none; } }
         .header__user_info_info .time_text {
@@ -567,9 +572,6 @@
               font-size: 11px;
               font-weight: normal;
               margin: 0 4px; }
-              @media (max-width: 423px) {
-                .header__user_info_info .time_text p i {
-                  margin: 0px; } }
             .header__user_info_info .time_text p span {
               font-size: 11px;
               color: #ff0000; }
@@ -580,6 +582,9 @@
             text-align: left;
             margin-left: 10px;
             cursor: pointer; }
+            @media (max-width: 1009px) {
+              .header__user_info_info .time_text h3 {
+                float: right; } }
             .header__user_info_info .time_text h3:hover {
               color: #074e23;
               text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52); }
@@ -593,7 +598,7 @@
         position: relative;
         width: 128px;
         height: 32px; }
-        @media (max-width: 636px) {
+        @media (max-width: 1009px) {
           .header__user_info_info_serch {
             display: none; } }
         .header__user_info_info_serch_input {
@@ -624,7 +629,7 @@
         color: #024753;
         text-decoration: underline;
         float: left; }
-        @media (max-width: 636px) {
+        @media (max-width: 1009px) {
           .header__user_info_info_check {
             display: none; } }
       .header__user_info_info_select_line {
@@ -640,7 +645,7 @@
         @media (max-width: 1170px) {
           .header__user_info_info_select_line {
             padding-top: 30px; } }
-        @media (max-width: 898px) {
+        @media (max-width: 1009px) {
           .header__user_info_info_select_line {
             display: none; } }
         .header__user_info_info_select_line_select {
@@ -752,6 +757,9 @@
       width: auto;
       float: left;
       background: none; }
+      @media (max-width: 1009px) {
+        .header_mini .header_nav .header_nav_logo_line .logo_mini {
+          display: none; } }
       @media (max-width: 405px) {
         .header_mini .header_nav .header_nav_logo_line {
           float: left; }
@@ -761,7 +769,7 @@
         display: none; }
       .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_schem {
         display: none; }
-      .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo a {
+      .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo .logo_big {
         width: 26px;
         height: 25px;
         background-image: url("../img/sprite_header.png");
@@ -772,12 +780,12 @@
         margin-top: 7px;
         margin-left: 27px; }
         @media (max-width: 405px) {
-          .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo a {
+          .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo .logo_big {
             margin-left: 0px; } }
-        .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo a:hover {
+        .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo .logo_big:hover {
           background-image: url("../img/sprite_header.png");
           background-position: -31px -175px; }
-        .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo a:before {
+        .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo .logo_big:before {
           display: none; }
       .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo p {
         display: none; }
